--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
            <!--animation on scroll behavior added by aos libray delays by 1ms-->
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
                 <h3>Model Peace Forum</h3>
-                <h1>HELP ENHANING YOUTH VOICES</h1>
+                <h1>HELP ENHANCING YOUTH VOICES</h1>
                 
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                      Cumque tenetur quis iusto eius, totam quisquam amet explicabo 
